-header overflow fixed. -font change on mouse hover. -react inline css styles example.

--- a/src/components/myHeader.css
+++ b/src/components/myHeader.css
@@ -3,6 +3,7 @@
     background-color: white;
     height: 5%; /*fixed eller prosent? */
     width: 100%;
+    overflow: auto; /*Adjusts element size depending on child size. */
 }
 
 #name{
@@ -22,5 +23,10 @@
 
 .headerOptions{
     float: right;
+    margin: 0;
     margin-left: 2.5em;
+    padding: 0;
+    border: none;
+    background: none;
+    font-size: 1rem;
 }
