--- a/src/components/workList.css
+++ b/src/components/workList.css
@@ -1,9 +1,10 @@
 .WorkListContainer{
-    width: 100%;
+    width: 20%;
 }
 
 #swText{
     font-weight: normal;
+    margin-bottom: 2em; 
 }
 
 .list{
